# abeacon

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SETUP.sh  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py  requirements.txt
backend/app/: __init__.py  config.py  database.py  security.py
backend/app/api/routes/: auth.py  health.py  users.py
backend/app/models/: user.py
backend/app/schemas/: user.py
niow/: cli.py  core.py
scripts/: run.py  run.sh
tests/: test_core.py
tests/smoke/: production-smoke.mjs
