[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "niow"
version = "0.1.0"
description = "Niow tool scaffold"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "abbieymatthews030-star"}]
dependencies = []

[project.scripts]
niow = "niow.cli:main"
